# r_giskard_EmotionCore

./: .gitignore  CMakeLists.txt  README.md  r_giskard_EmotionCore.code-workspace
cmake/: AnimalEmotionCore.cmake  GenericEmotionCore.cmake
examples/AnimalEmotionCore/: CMakeLists.txt  main.cpp
examples/GenericEmotionCore/: CMakeLists.txt  main.cpp
examples/generic_emotion_core_operation/: main.cpp
include/: AnimalEmotionCore.hpp  GenericEmotionCore.hpp  error_t.h
include/AnimalEmotionCore/: AnimalEmotionCore.hpp
include/GenericEmotionCore/: CoreParams.hpp  CoreParams_types.hpp  EmotionalStateDescriptors.hpp  EmotionalStateDescriptors_types.hpp  GenericEmotionCore.hpp  InDataDescriptors.hpp  InDataDescriptors_types.hpp  TemporaryCoreImpact.hpp  emotion_core_err_t.h
src/: AnimalEmotionCore.cpp  GenericEmotionCore.cpp
src/AnimalEmotionCore/: AnimalEmotionCore.cpp
src/GenericEmotionCore/: CoreParams.cpp  EmotionalStateDescriptors.cpp  GenericEmotionCore.cpp  InDataDescriptors.cpp
